refactore: use const variable

--- a/demo-performance.html
+++ b/demo-performance.html
@@ -138,7 +138,7 @@
 
   function restoreWithSpans() {
     while (true) {
-      const span = document.querySelector(`.highlighted-with-span`);
+      const span = document.querySelector(`.${highlightedWithSpanClass}`);
       if (!span) {
         break
       }
